--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "./server.js" 
   },
 
-  "version": "0.0.2",
+  "version": "v0.4.11",
 
   "dependencies": {
     "telegraph"        : "0.8.03",
