--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Your Name <email@address.com>",
+  "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
 
   "name": "TelegraphApp",
 
