--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "TelegraphApp",
   "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
 
-  "version": "v0.6.0",
+  "version": "v0.6.*",
   
   "dependencies": {
     "telegraph"        : "0.8.04",
