--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 
   "version": "v0.6.*",
 
-  "scripts": { "start": "./server.js" }
+  "scripts": { "start": "./server.js" },
   
   "dependencies": {
     "telegraph"        : "0.8.04",
