--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "TelegraphApp",
   "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
 
-  "version": "v0.4.*",
+  "version": "v0.4.7",
 
   "scripts": { "start": "./server.js" },
   
