--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "Twittermap",
   "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
-  "version": "0.6.5-1",
+  "version": "0.6.5-2",
   "scripts": {
     "start": "server.js"
   },
   "dependencies": {
-    "telegraph": "0.8.1",
+    "telegraph": "0.8.12",
     "ntwitter": "0.2.10",
-    "speakeasy-nlp": "0.1.42"
+    "speakeasy-nlp": "0.1.42",
+    "oauth": "0.9.x",
+    "request": "2.9.x"
   },
   "subdomain": "twittermap"
 }
