--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Twittermap",
   "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
-  "version": "0.1.0",
+  "version": "0.1.0-1",
   "scripts": {
     "start": "server.js"
   },
