--- a/config/twitter_key.sample
+++ b/config/twitter_key.sample
@@ -1,8 +1,8 @@
 {
-  "consumer_key"        : "rPkzBTS2tnvUaxV8h5pMVA",
-  "consumer_secret"     : "5B16t4voJKZ0WcU1dS1fr8fT6cRnzWoxHMnWDZp6cc",
-  "access_token_key"    : "48188274-PsxLGhh7SJVzz3catdgmfNGLGa6qHYsq7464koFrJ",
-  "access_token_secret" : "pR7CpeEtC3yBIof1c8lmVCoGDKMjLy1bTboIOIXVCKM",
+  "consumer_key"        : "**********",
+  "consumer_secret"     : "**********",
+  "access_token_key"    : "**********",
+  "access_token_secret" : "**********",
 
-  "callback_url"        : "http://127.0.0.1:3000/auth/twitter/callback"
+  "callback_url"        : "**********"
 }
