--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
   "scripts"        : {
     "test"         : "vows --spec",
     "start"        : "node app.js"
-  }
+  },
+
+  "subdomain"      : "twittermap"
 }
