updates package.json for nodejitsu

--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name"            : "Twittermap",
-  "description"     : "Maps tweets with sentiment",
-
-  "version"         : "0.0.0",
-  "private"         : true,
-
+  "name": "Twittermap",
+  "description": "Maps tweets with sentiment",
+  "engines": {
+    "node": "v0.6.x"
+  },
+  "version": "0.3.0-1",
+  "private": true,
   "dependencies": {
-    "union"         : "0.1.7",
-    "flatiron"      : "0.1.11",
-    "socket.io"     : "*",
-    "connect"       : "*",
-    "ntwitter"      : "*",
-    "speakeasy-nlp" : "*",
-    "request"       : "*"
+    "union": "0.1.7",
+    "flatiron": "0.1.11",
+    "socket.io": "*",
+    "connect": "*",
+    "ntwitter": "*",
+    "speakeasy-nlp": "*",
+    "request": "*"
   },
-
   "devDependencies": {
-    "api-easy"     : "0.3.2",
-    "vows"         : "0.6.1"
+    "api-easy": "0.3.2",
+    "vows": "0.6.1"
   },
-
-  "scripts"        : {
-    "test"         : "vows --spec",
-    "start"        : "node app.js"
+  "scripts": {
+    "test": "vows --spec",
+    "start": "node app.js"
   },
-
-  "subdomain"      : "twittermap"
+  "subdomain": "twittermap"
 }
